fixing cards images on small devises

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -131,7 +131,7 @@ body{
 
 			@media screen and (max-width: 400px) {
 				.card .image.custom .artist_profile_pic{
-					width: 289px !important;
+					width: 288px !important;
 					height: 210px !important;
 				}
 			}
